--- a/dev_env/evaluation.ipynb
+++ b/dev_env/evaluation.ipynb
@@ -11,125 +11,179 @@
    },
    "outputs": [],
    "source": [
-    "# 🎯 CREDIT RISK MODEL EVALUATION + AUTO REGISTRATION (NO DUPLICATES)\n",
+    "# 🎯 MODEL EVALUATION SCRIPT \n",
     "\n",
     "import mlflow\n",
     "from mlflow.tracking import MlflowClient\n",
     "import pandas as pd\n",
     "import json\n",
+    "import yaml\n",
+    "import sys\n",
+    "import traceback\n",
     "from datetime import datetime\n",
     "from pyspark.sql import SparkSession\n",
+    "from typing import Dict, List\n",
     "\n",
-    "# CONFIG \n",
+    "print(\"=\" * 80)\n",
+    "print(\"🎯 MODEL EVALUATION PIPELINE — LOG ONLY (NO REGISTRATION)\")\n",
+    "print(\"=\" * 80)\n",
     "\n",
-    "EXPERIMENT_NAME = \"/Shared/CreditRisk_ML_Experiments\"\n",
-    "MODEL_NAME = \"workspace.ml_credit_risk.credit_risk_model_random_forest\"\n",
+    "# -------------------------\n",
+    "# 1️⃣ Load Config\n",
+    "# -------------------------\n",
     "\n",
-    "PRIMARY_METRIC = \"test_f1\"\n",
-    "DUPLICATE_TOLERANCE = 0.001  # 0.1% tolerance\n",
+    "print(\"\\n📋 Loading configuration from pipeline_config.yml...\")\n",
     "\n",
-    "EVALUATION_LOG = \"workspace.ml_credit_risk.model_registration_log\"\n",
+    "try:\n",
+    "    with open(\"pipeline_config.yml\", \"r\") as f:\n",
+    "        pipeline_cfg = yaml.safe_load(f)\n",
+    "    print(\"✅ Configuration Loaded\\n\")\n",
     "\n",
-    "print(\"\\n📌 CONFIGURATION LOADED\")\n",
-    "print(f\"Experiment: {EXPERIMENT_NAME}\")\n",
-    "print(f\"Duplicate Detection Metric Tolerance: {DUPLICATE_TOLERANCE}\")\n",
-    "print(\"=\"*70)\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Error loading config: {e}\")\n",
+    "    sys.exit(1)\n",
     "\n",
-    "# INIT\n",
+    "class Config:\n",
+    "    def __init__(self, cfg):\n",
+    "        self.MODEL_TYPE = cfg[\"model\"][\"type\"]\n",
+    "        UC_CATALOG = cfg[\"model\"][\"catalog\"]\n",
+    "        UC_SCHEMA = cfg[\"model\"][\"schema\"]\n",
+    "        BASE_NAME = cfg[\"model\"][\"base_name\"]\n",
     "\n",
-    "spark = SparkSession.builder.appName(\"CreditRiskModelRegistration\").getOrCreate()\n",
-    "mlflow.set_tracking_uri(\"databricks\")\n",
-    "mlflow.set_registry_uri(\"databricks-uc\")\n",
-    "client = MlflowClient()\n",
+    "        self.MODEL_NAME = f\"{UC_CATALOG}.{UC_SCHEMA}.{BASE_NAME}_{self.MODEL_TYPE}\"\n",
     "\n",
+    "        self.EXPERIMENT_NAME = cfg[\"experiment\"][\"name\"]\n",
+    "        self.ARTIFACT_PATH = cfg[\"experiment\"][\"artifact_path\"]\n",
     "\n",
-    "experiment = mlflow.get_experiment_by_name(EXPERIMENT_NAME)\n",
-    "if experiment is None:\n",
-    "    raise Exception(f\"❌ Experiment '{EXPERIMENT_NAME}' not found!\")\n",
+    "        metrics_cfg = cfg[\"metrics\"][\"classification\"]\n",
+    "        self.PRIMARY_METRIC = metrics_cfg[\"primary_metric\"]\n",
+    "        self.TRACKED_METRICS = metrics_cfg[\"tracked_metrics\"]\n",
+    "        self.DIRECTION = metrics_cfg[\"direction\"]\n",
+    "        self.THRESHOLD_METRICS = metrics_cfg[\"threshold_metrics\"]\n",
     "\n",
-    "# STEP 1: Get Best Latest Trained Run\n",
+    "        self.EVALUATION_LOG_TABLE = cfg[\"tables\"][\"evaluation_log\"]\n",
+    "        self.RECENT_N = cfg[\"comparison\"][\"recent_n\"]\n",
     "\n",
-    "def get_latest_best_run():\n",
+    "        print(f\"\\n📌 Evaluation Config Summary:\")\n",
+    "        print(f\"   Model: {self.MODEL_NAME}\")\n",
+    "        print(f\"   Primary Metric: {self.PRIMARY_METRIC} ({self.DIRECTION})\")\n",
+    "        print(f\"   Logging Table: {self.EVALUATION_LOG_TABLE}\")\n",
+    "\n",
+    "config = Config(pipeline_cfg)\n",
+    "print(\"=\" * 80)\n",
+    "\n",
+    "# -------------------------\n",
+    "# 2️⃣ Initialize MLflow & Spark\n",
+    "# -------------------------\n",
+    "\n",
+    "try:\n",
+    "    spark = SparkSession.builder.appName(\"ModelEvaluationOnly\").getOrCreate()\n",
+    "    mlflow.set_tracking_uri(\"databricks\")\n",
+    "    client = MlflowClient()\n",
+    "\n",
+    "    experiment = mlflow.get_experiment_by_name(config.EXPERIMENT_NAME)\n",
+    "    if experiment is None:\n",
+    "        raise Exception(f\"Experiment not found: {config.EXPERIMENT_NAME}\")\n",
+    "\n",
+    "    print(\"\\n🔥 MLflow + Spark loaded successfully\\n\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ MLflow Init Failed: {e}\")\n",
+    "    sys.exit(1)\n",
+    "\n",
+    "# -------------------------\n",
+    "# 3️⃣ Fetch Runs\n",
+    "# -------------------------\n",
+    "\n",
+    "def get_recent_runs():\n",
+    "    print(\"\\n📍 Fetching Experiment Runs...\")\n",
+    "\n",
+    "    order = (\n",
+    "        f\"metrics.{config.PRIMARY_METRIC} DESC\"\n",
+    "        if config.DIRECTION == \"maximize\"\n",
+    "        else f\"metrics.{config.PRIMARY_METRIC} ASC\"\n",
+    "    )\n",
+    "\n",
     "    runs = client.search_runs(\n",
     "        [experiment.experiment_id],\n",
-    "        order_by=[f\"metrics.{PRIMARY_METRIC} DESC\"],\n",
-    "        max_results=1\n",
+    "        order_by=[order],\n",
+    "        max_results=config.RECENT_N\n",
     "    )\n",
-    "    \n",
-    "    best_run = runs[0]\n",
-    "    \n",
-    "    return {\n",
-    "        \"run_id\": best_run.info.run_id,\n",
-    "        \"run_name\": best_run.info.run_name,\n",
-    "        \"metric\": best_run.data.metrics.get(PRIMARY_METRIC),\n",
-    "        \"params\": best_run.data.params,\n",
-    "        \"model_uri\": f\"runs:/{best_run.info.run_id}/ml_model\"\n",
-    "    }\n",
     "\n",
-    "# STEP 2: Check Duplicate in Registry\n",
+    "    if not runs:\n",
+    "        print(\"⚠ No model runs found.\")\n",
+    "        return []\n",
     "\n",
-    "def is_duplicate_model(new_model):\n",
-    "    versions = client.search_model_versions(f\"name='{MODEL_NAME}'\")\n",
-    "    \n",
-    "    for v in versions:\n",
-    "        run = client.get_run(v.run_id)\n",
-    "        existing_metric = run.data.metrics.get(PRIMARY_METRIC)\n",
-    "        existing_params = run.data.params\n",
-    "        \n",
-    "        metric_match = abs(existing_metric - new_model[\"metric\"]) < DUPLICATE_TOLERANCE\n",
-    "        params_match = (existing_params == new_model[\"params\"])\n",
-    "        \n",
-    "        if metric_match and params_match:\n",
-    "            return True\n",
-    "    \n",
-    "    return False\n",
+    "    run_list = []\n",
+    "    for run in runs:\n",
+    "        metrics = {m: run.data.metrics.get(m) for m in config.TRACKED_METRICS}\n",
     "\n",
-    "# STEP 3: Log Decision\n",
+    "        run_list.append({\n",
+    "            \"run_id\": run.info.run_id,\n",
+    "            \"run_name\": run.info.run_name,\n",
+    "            \"primary_metric\": run.data.metrics.get(config.PRIMARY_METRIC),\n",
+    "            \"all_metrics\": metrics,\n",
+    "            \"params\": run.data.params,\n",
+    "            \"model_uri\": f\"runs:/{run.info.run_id}/{config.ARTIFACT_PATH}\",\n",
+    "            \"timestamp\": datetime.fromtimestamp(run.info.start_time / 1000),\n",
+    "        })\n",
     "\n",
-    "def log_registration(model, registered, reason):\n",
-    "    df = pd.DataFrame([{\n",
-    "        \"timestamp\": datetime.now(),\n",
-    "        \"run_id\": model[\"run_id\"],\n",
-    "        \"run_name\": model[\"run_name\"],\n",
-    "        \"metric\": model[\"metric\"],\n",
-    "        \"params_json\": json.dumps(model[\"params\"]),\n",
-    "        \"model_uri\": model[\"model_uri\"],\n",
-    "        \"registered\": registered,\n",
-    "        \"reason\": reason\n",
-    "    }])\n",
-    "    \n",
-    "    spark.createDataFrame(df).write.format(\"delta\").mode(\"append\").saveAsTable(EVALUATION_LOG)\n",
+    "    print(f\"📌 {len(run_list)} runs fetched and ready for logging.\")\n",
+    "    return run_list\n",
     "\n",
-    "# MAIN EXECUTION\n",
+    "# -------------------------\n",
+    "# 4️⃣ Log Evaluation Results\n",
+    "# -------------------------\n",
     "\n",
-    "print(\"\\n🚀 Checking latest model run...\")\n",
+    "def log_results(run_list):\n",
+    "    print(\"\\n📝 Logging evaluation results to Delta table...\")\n",
     "\n",
-    "latest_model = get_latest_best_run()\n",
+    "    records = []\n",
+    "    for run in run_list:\n",
+    "        records.append({\n",
+    "            \"timestamp\": datetime.now(),\n",
+    "            \"run_id\": run[\"run_id\"],\n",
+    "            \"run_name\": run[\"run_name\"],\n",
+    "            \"model_name\": config.MODEL_NAME,\n",
+    "            \"primary_metric\": config.PRIMARY_METRIC,\n",
+    "            \"primary_metric_value\": run[\"primary_metric\"],\n",
+    "            \"all_metrics_json\": json.dumps(run[\"all_metrics\"]),\n",
+    "            \"params_json\": json.dumps(run[\"params\"]),\n",
+    "            \"model_uri\": run[\"model_uri\"],\n",
+    "            \"registered\": False,  # Registration handled separately\n",
+    "        })\n",
     "\n",
-    "# Duplicate handling logic\n",
-    "if is_duplicate_model(latest_model):\n",
-    "    status = False\n",
-    "    reason = \"⚠ Duplicate model detected — same params & same metric. NOT registered.\"\n",
-    "else:\n",
-    "    # Register new unique model\n",
-    "    client.create_model_version(\n",
-    "        name=MODEL_NAME,\n",
-    "        source=latest_model[\"model_uri\"],\n",
-    "        run_id=latest_model[\"run_id\"]\n",
-    "    )\n",
-    "    \n",
-    "    status = True\n",
-    "    reason = \"✔ Model successfully registered (unique combination).\"\n",
+    "    df = pd.DataFrame(records)\n",
+    "    spark.createDataFrame(df).write.format(\"delta\").mode(\"append\").saveAsTable(config.EVALUATION_LOG_TABLE)\n",
+    "    print(\"✅ Evaluation logged successfully.\")\n",
     "\n",
+    "# -------------------------\n",
+    "# 5️⃣ Display Summary\n",
+    "# -------------------------\n",
     "\n",
-    "# Log result\n",
-    "log_registration(latest_model, status, reason)\n",
+    "def show_summary(run_list):\n",
+    "    print(\"\\n📊 TOP MODEL RESULTS:\\n\")\n",
+    "    for rank, run in enumerate(run_list[:10], 1):\n",
+    "        print(f\"{rank}. {run['run_name']} → {config.PRIMARY_METRIC}: {run['primary_metric']:.4f}\")\n",
     "\n",
+    "# -------------------------\n",
+    "# 🚀 MAIN EXECUTION\n",
+    "# -------------------------\n",
     "\n",
-    "print(\"\\n📍 PROCESS COMPLETE\")\n",
-    "print(f\"➡ REGISTERED: {status}\")\n",
-    "print(f\"➡ REASON: {reason}\")\n",
-    "print(\"=\"*70)\n"
+    "def main():\n",
+    "    run_list = get_recent_runs()\n",
+    "    if not run_list:\n",
+    "        print(\"❌ No runs found. Exiting.\")\n",
+    "        return\n",
+    "\n",
+    "    log_results(run_list)\n",
+    "    show_summary(run_list)\n",
+    "\n",
+    "    print(\"\\n🎉 Evaluation Completed — No Models Registered (As Expected)\")\n",
+    "    print(\"=\" * 80)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   }
  ],
