--- a/dev_env/register.ipynb
+++ b/dev_env/register.ipynb
@@ -18,9 +18,7 @@
     "import sys\n",
     "import yaml\n",
     "import json\n",
-    "import traceback\n",
-    "import requests\n",
-    "from typing import Dict, Optional, List\n",
+    "from typing import Dict, List\n",
     "from datetime import datetime\n",
     "from pyspark.sql import SparkSession\n",
     "import pandas as pd\n",
@@ -59,6 +57,9 @@
     "        self.DUPLICATE_CHECK_ENABLED = pipeline_cfg[\"registry\"][\"duplicate_detection\"][\"enabled\"]\n",
     "\n",
     "        self.EVALUATION_LOG_TABLE = pipeline_cfg[\"tables\"][\"evaluation_log\"]\n",
+    "        \n",
+    "        # ⭐ NEW TABLE FOR REGISTRATION HISTORY ⭐\n",
+    "        self.REGISTRATION_LOG_TABLE = pipeline_cfg[\"tables\"][\"registration_log\"]\n",
     "\n",
     "\n",
     "config = Config()\n",
@@ -79,7 +80,7 @@
     "    raise Exception(f\"Experiment '{config.EXPERIMENT_NAME}' not found!\")\n",
     "\n",
     "\n",
-    "# ---------------------- FETCH ALL RUNS (UPDATED) ----------------------\n",
+    "# ---------------------- FETCH ALL RUNS ----------------------\n",
     "\n",
     "def get_all_runs() -> List[Dict]:\n",
     "    print(\"\\n📍 Fetching ALL experiment runs...\")\n",
@@ -90,21 +91,17 @@
     "        max_results=500\n",
     "    )\n",
     "\n",
-    "    run_list = []\n",
-    "    for run in runs:\n",
-    "        metrics = {m: run.data.metrics.get(m) for m in config.METRICS_TO_COMPARE}\n",
-    "\n",
-    "        run_list.append({\n",
+    "    return [\n",
+    "        {\n",
     "            \"run_id\": run.info.run_id,\n",
     "            \"run_name\": run.info.run_name or \"unnamed_run\",\n",
-    "            \"metrics\": metrics,\n",
+    "            \"metrics\": {m: run.data.metrics.get(m) for m in config.METRICS_TO_COMPARE},\n",
     "            \"params\": run.data.params,\n",
     "            \"primary_metric\": run.data.metrics.get(config.PRIMARY_METRIC),\n",
     "            \"model_uri\": f\"runs:/{run.info.run_id}/{config.ARTIFACT_PATH}\"\n",
-    "        })\n",
-    "\n",
-    "    print(f\"📌 Total runs fetched: {len(run_list)}\")\n",
-    "    return run_list\n",
+    "        }\n",
+    "        for run in runs\n",
+    "    ]\n",
     "\n",
     "\n",
     "# ---------------------- DUPLICATE DETECTION ----------------------\n",
@@ -117,21 +114,13 @@
     "\n",
     "    for version in versions:\n",
     "        run = client.get_run(version.run_id)\n",
-    "        \n",
-    "        # Compare metrics\n",
-    "        metric_match = True\n",
-    "        for m in config.METRICS_TO_COMPARE:\n",
-    "            old_val = run.data.metrics.get(m)\n",
-    "            new_val = new_model[\"metrics\"].get(m)\n",
     "\n",
-    "            if old_val is None or new_val is None:\n",
-    "                continue\n",
+    "        metric_match = all(\n",
+    "            abs(run.data.metrics.get(m) - new_model[\"metrics\"].get(m)) <= config.TOLERANCE\n",
+    "            for m in config.METRICS_TO_COMPARE\n",
+    "            if run.data.metrics.get(m) is not None and new_model[\"metrics\"].get(m) is not None\n",
+    "        )\n",
     "\n",
-    "            if abs(old_val - new_val) > config.TOLERANCE:\n",
-    "                metric_match = False\n",
-    "                break\n",
-    "\n",
-    "        # Compare params\n",
     "        params_match = (new_model[\"params\"] == run.data.params)\n",
     "\n",
     "        if metric_match and params_match:\n",
@@ -153,9 +142,9 @@
     "    return new_version.version\n",
     "\n",
     "\n",
-    "# ---------------------- LOG DECISION ----------------------\n",
+    "# ---------------------- ⭐ NEW LOG TABLE WRITE ⭐ ----------------------\n",
     "\n",
-    "def log_decision(model, registered, version, reason):\n",
+    "def log_registration(model, registered, version, reason):\n",
     "    df = pd.DataFrame([{\n",
     "        \"timestamp\": datetime.now(),\n",
     "        \"run_id\": model[\"run_id\"],\n",
@@ -168,11 +157,16 @@
     "        \"reason\": reason\n",
     "    }])\n",
     "\n",
-    "    spark.createDataFrame(df).write.format(\"delta\").mode(\"append\").saveAsTable(config.EVALUATION_LOG_TABLE)\n",
-    "    print(\"📄 Logged in evaluation table\")\n",
+    "    spark.createDataFrame(df)\\\n",
+    "        .write\\\n",
+    "        .format(\"delta\")\\\n",
+    "        .mode(\"append\")\\\n",
+    "        .saveAsTable(config.REGISTRATION_LOG_TABLE)\n",
+    "\n",
+    "    print(f\"📄 Logged in: {config.REGISTRATION_LOG_TABLE}\")\n",
     "\n",
     "\n",
-    "# ---------------------- MAIN EXECUTION (UPDATED LOOP) ----------------------\n",
+    "# ---------------------- MAIN EXECUTION ----------------------\n",
     "\n",
     "def main():\n",
     "    print(\"\\n🚀 Scanning all model runs...\")\n",
@@ -184,9 +178,9 @@
     "        version = register_model(model)\n",
     "\n",
     "        if version:\n",
-    "            log_decision(model, True, version, \"✔ Registered (unique)\")\n",
+    "            log_registration(model, True, version, \"✔ Registered (unique)\")\n",
     "        else:\n",
-    "            log_decision(model, False, None, \"⚠ Duplicate - Skipped\")\n",
+    "            log_registration(model, False, None, \"⚠ Duplicate - Skipped\")\n",
     "\n",
     "    print(\"\\n🎉 Registration Complete — All Runs Processed\")\n",
     "\n",
