fix some scripts

--- a/dev_env/register.ipynb
+++ b/dev_env/register.ipynb
@@ -11,20 +11,23 @@
    },
    "outputs": [],
    "source": [
-    "# 🎯 MODEL REGISTRATION SCRIPT \n",
+    "# 🎯 MODEL REGISTRATION SCRIPT (WITH SLACK NOTIFICATIONS ADDED)\n",
     "\n",
     "import mlflow\n",
     "from mlflow.tracking import MlflowClient\n",
     "import sys\n",
     "import yaml\n",
     "import json\n",
-    "from typing import Dict, List\n",
+    "import traceback\n",
+    "import requests\n",
+    "from typing import Dict, Optional, List\n",
     "from datetime import datetime\n",
     "from pyspark.sql import SparkSession\n",
     "import pandas as pd\n",
+    "from IPython import get_ipython\n",
     "\n",
     "print(\"=\" * 80)\n",
-    "print(\"🎯 MODEL REGISTRATION SYSTEM (CONTROLLED MULTI-RUN REGISTRATION)\")\n",
+    "print(\"🎯 MODEL REGISTRATION SYSTEM (CONTROLLED MULTI-RUN + SLACK NOTIFICATIONS)\")\n",
     "print(\"=\" * 80)\n",
     "\n",
     "# ---------------------- LOAD PIPELINE CONFIG ----------------------\n",
@@ -57,16 +60,52 @@
     "        self.DUPLICATE_CHECK_ENABLED = pipeline_cfg[\"registry\"][\"duplicate_detection\"][\"enabled\"]\n",
     "\n",
     "        self.EVALUATION_LOG_TABLE = pipeline_cfg[\"tables\"][\"evaluation_log\"]\n",
-    "        \n",
-    "        # ⭐ NEW TABLE FOR REGISTRATION HISTORY ⭐\n",
-    "        self.REGISTRATION_LOG_TABLE = pipeline_cfg[\"tables\"][\"registration_log\"]\n",
+    "\n",
+    "        # ---------------------- NEW: SLACK CONFIG ----------------------\n",
+    "        # Try shared-scope then dev-scope (same behavior as V2)\n",
+    "        self.SLACK_WEBHOOK = None\n",
+    "        for scope in [\"shared-scope\", \"dev-scope\"]:\n",
+    "            try:\n",
+    "                self.SLACK_WEBHOOK = dbutils.secrets.get(scope, \"SLACK_WEBHOOK_URL\")\n",
+    "                print(f\"🔐 Slack webhook loaded from secret scope: {scope}\")\n",
+    "                break\n",
+    "            except:\n",
+    "                pass\n",
+    "\n",
+    "        if not self.SLACK_WEBHOOK:\n",
+    "            print(\"⚠ Slack webhook NOT configured. Notifications disabled.\")\n",
     "\n",
     "\n",
     "config = Config()\n",
     "\n",
     "print(f\"\\n📌 Model Registry: {config.MODEL_NAME}\")\n",
     "print(f\"📌 Duplicate Logic: {'ENABLED' if config.DUPLICATE_CHECK_ENABLED else 'DISABLED'}\")\n",
+    "print(f\"📌 Slack Enabled: {'YES' if config.SLACK_WEBHOOK else 'NO'}\")\n",
     "print(\"=\" * 80)\n",
+    "\n",
+    "\n",
+    "# ---------------------- SLACK NOTIFIER (FROM V2) ----------------------\n",
+    "\n",
+    "class SlackNotifier:\n",
+    "    def __init__(self, webhook_url: Optional[str]):\n",
+    "        self.webhook_url = webhook_url\n",
+    "\n",
+    "    def send(self, message: str, level: str = \"info\"):\n",
+    "        if not self.webhook_url:\n",
+    "            print(f\"📢 [Slack Disabled] {message}\")\n",
+    "            return\n",
+    "        \n",
+    "        emoji = {\"info\":\"ℹ️\",\"success\":\"✅\",\"warning\":\"⚠️\",\"error\":\"❌\"}.get(level,\"ℹ️\")\n",
+    "        payload = {\"text\": f\"{emoji} {message}\"}\n",
+    "\n",
+    "        try:\n",
+    "            requests.post(self.webhook_url, json=payload, timeout=5)\n",
+    "            print(f\"📨 Slack message sent: {level}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"⚠ Slack send failed: {e}\")\n",
+    "\n",
+    "slack = SlackNotifier(config.SLACK_WEBHOOK)\n",
+    "\n",
     "\n",
     "# ---------------------- INIT MLFLOW + SPARK ----------------------\n",
     "\n",
@@ -125,6 +164,7 @@
     "\n",
     "        if metric_match and params_match:\n",
     "            print(f\"⚠ Duplicate detected → Matches version v{version.version}\")\n",
+    "            slack.send(f\"⚠ Duplicate model skipped (Run: {new_model['run_name']})\", \"warning\")\n",
     "            return True\n",
     "    \n",
     "    return False\n",
@@ -134,17 +174,19 @@
     "\n",
     "def register_model(model: Dict):\n",
     "    if is_duplicate_model(model):\n",
-    "        print(\"⛔ SKIPPED — Duplicate Model\")\n",
     "        return None\n",
     "\n",
     "    new_version = mlflow.register_model(model[\"model_uri\"], config.MODEL_NAME)\n",
     "    print(f\"🎯 Registered version: {new_version.version}\")\n",
+    "\n",
+    "    slack.send(f\"✅ Model registered: {config.MODEL_NAME} (v{new_version.version})\", \"success\")\n",
+    "\n",
     "    return new_version.version\n",
     "\n",
     "\n",
-    "# ---------------------- ⭐ NEW LOG TABLE WRITE ⭐ ----------------------\n",
+    "# ---------------------- LOG DECISION ----------------------\n",
     "\n",
-    "def log_registration(model, registered, version, reason):\n",
+    "def log_decision(model, registered, version, reason):\n",
     "    df = pd.DataFrame([{\n",
     "        \"timestamp\": datetime.now(),\n",
     "        \"run_id\": model[\"run_id\"],\n",
@@ -157,13 +199,8 @@
     "        \"reason\": reason\n",
     "    }])\n",
     "\n",
-    "    spark.createDataFrame(df)\\\n",
-    "        .write\\\n",
-    "        .format(\"delta\")\\\n",
-    "        .mode(\"append\")\\\n",
-    "        .saveAsTable(config.REGISTRATION_LOG_TABLE)\n",
-    "\n",
-    "    print(f\"📄 Logged in: {config.REGISTRATION_LOG_TABLE}\")\n",
+    "    spark.createDataFrame(df).write.format(\"delta\").mode(\"append\").saveAsTable(config.EVALUATION_LOG_TABLE)\n",
+    "    print(\"📄 Logged in evaluation table\")\n",
     "\n",
     "\n",
     "# ---------------------- MAIN EXECUTION ----------------------\n",
@@ -173,15 +210,16 @@
     "    runs = get_all_runs()\n",
     "\n",
     "    for idx, model in enumerate(runs, start=1):\n",
-    "        print(f\"\\n---------- [{idx}/{len(runs)}] Processing: {model['run_name']} ({model['primary_metric']}) ----------\")\n",
+    "        print(f\"\\n---------- [{idx}/{len(runs)}] Processing: {model['run_name']} ----------\")\n",
     "\n",
     "        version = register_model(model)\n",
     "\n",
     "        if version:\n",
-    "            log_registration(model, True, version, \"✔ Registered (unique)\")\n",
+    "            log_decision(model, True, version, \"✔ Registered (unique)\")\n",
     "        else:\n",
-    "            log_registration(model, False, None, \"⚠ Duplicate - Skipped\")\n",
+    "            log_decision(model, False, None, \"⚠ Duplicate - Skipped\")\n",
     "\n",
+    "    slack.send(\"📁 Model registration pipeline completed.\", \"info\")\n",
     "    print(\"\\n🎉 Registration Complete — All Runs Processed\")\n",
     "\n",
     "\n",
