--- a/dev_env/train.ipynb
+++ b/dev_env/train.ipynb
@@ -132,10 +132,15 @@
     "\n",
     "        model.fit(X_train, y_train)\n",
     "\n",
+    "        # Train predictions\n",
+    "        y_train_pred = model.predict(X_train)\n",
+    "        \n",
+    "        # Test predictions\n",
     "        y_test_pred = model.predict(X_test)\n",
     "        y_test_proba = model.predict_proba(X_test)[:, 1]\n",
     "\n",
     "        metrics_dict = {\n",
+    "            \"train_accuracy\": accuracy_score(y_train, y_train_pred),\n",
     "            \"test_accuracy\": accuracy_score(y_test, y_test_pred),\n",
     "            \"test_precision\": precision_score(y_test, y_test_pred, zero_division=0),\n",
     "            \"test_recall\": recall_score(y_test, y_test_pred, zero_division=0),\n",
@@ -205,7 +210,7 @@
     "        )\n",
     "        results.append({ \"name\": exp[\"name\"], \"run_id\": run_id, \"metrics\": metrics })\n",
     "\n",
-    "    print(\"\\n🎉 Training completed successfully!\")\n"
+    "    print(\"\\n🎉 Training completed successfully!\")"
    ]
   }
  ],
