--- a/uat_env/uat_staging.ipynb
+++ b/uat_env/uat_staging.ipynb
@@ -11,14 +11,7 @@
    },
    "outputs": [],
    "source": [
-    "# Databricks notebook source\n",
-    "# =============================================================================\n",
-    "# 🚀 UAT STAGING PROMOTION - NEW WORKFLOW (CONFIG-DRIVEN)\n",
-    "# =============================================================================\n",
-    "# Purpose: Promote registered model from model_registration.py to Staging alias\n",
-    "# Prerequisites: Run data_preparation.py → train.py → model_registration.py\n",
-    "# Compatible with new workflow\n",
-    "# =============================================================================\n",
+    "# 🚀 UAT STAGING PROMOTION - ALWAYS BEST MODEL LOGIC\n",
     "\n",
     "import mlflow\n",
     "from mlflow.tracking import MlflowClient\n",
@@ -26,11 +19,11 @@
     "import yaml\n",
     "import sys\n",
     "import traceback\n",
-    "from typing import Optional, Dict\n",
+    "from typing import Optional, Dict, List\n",
     "from datetime import datetime\n",
     "\n",
     "print(\"=\" * 80)\n",
-    "print(\"🚀 UAT STAGING PROMOTION (NO SLACK VERSION)\")\n",
+    "print(\"🚀 UAT STAGING PROMOTION - ALWAYS BEST MODEL\")\n",
     "print(\"=\" * 80)\n",
     "\n",
     "# =============================================================================\n",
@@ -53,7 +46,7 @@
     "    sys.exit(1)\n",
     "\n",
     "# =============================================================================\n",
-    "# ✅ CONFIGURATION CLASS (Slack Removed)\n",
+    "# ✅ CONFIGURATION CLASS\n",
     "# =============================================================================\n",
     "class Config:\n",
     "    \"\"\"Configuration manager - reads from pipeline_config.yml\"\"\"\n",
@@ -77,8 +70,9 @@
     "        \n",
     "        print(f\"\\n📊 Configuration Summary:\")\n",
     "        print(f\"   Model Name: {self.MODEL_NAME}\")\n",
-    "        print(f\"   Alias: @{self.STAGING_ALIAS}\")\n",
-    "        print(f\"   Metric: {self.PRIMARY_METRIC} ({self.DIRECTION})\")\n",
+    "        print(f\"   Staging Alias: @{self.STAGING_ALIAS}\")\n",
+    "        print(f\"   Primary Metric: {self.PRIMARY_METRIC}\")\n",
+    "        print(f\"   Direction: {self.DIRECTION}\")\n",
     "\n",
     "# Initialize config\n",
     "config = Config()\n",
@@ -108,97 +102,160 @@
     "# =============================================================================\n",
     "\n",
     "def wait_until_ready(version: int, timeout: int = 300) -> bool:\n",
+    "    \"\"\"Wait for model version to become READY\"\"\"\n",
     "    print(f\"\\n⏳ Waiting for model v{version} to become READY...\")\n",
     "\n",
     "    start = time.time()\n",
     "    while time.time() - start < timeout:\n",
     "        mv = client.get_model_version(config.MODEL_NAME, version)\n",
     "        if mv.status == \"READY\":\n",
-    "            print(f\"   ✅ Model v{version} READY\")\n",
+    "            print(f\"   ✅ Model v{version} is READY\")\n",
     "            return True\n",
     "        elif mv.status == \"FAILED_REGISTRATION\":\n",
     "            print(f\"   ❌ Model registration failed\")\n",
     "            return False\n",
     "        time.sleep(5)\n",
     "\n",
-    "    print(f\"   ⏰ Timeout waiting for READY\")\n",
+    "    print(f\"   ⏰ Timeout waiting for READY status\")\n",
     "    return False\n",
     "\n",
     "\n",
     "def get_metric_from_run(run_id: str) -> Optional[float]:\n",
+    "    \"\"\"Fetch primary metric value from MLflow run\"\"\"\n",
     "    try:\n",
     "        run = client.get_run(run_id)\n",
     "        metric_value = run.data.metrics.get(config.PRIMARY_METRIC)\n",
-    "        print(f\"   ↳ Metric = {metric_value}\")\n",
     "        return metric_value\n",
-    "    except:\n",
+    "    except Exception as e:\n",
+    "        print(f\"   ⚠️ Failed to get metric for run {run_id}: {e}\")\n",
     "        return None\n",
     "\n",
     "\n",
-    "def get_latest_registered_version():\n",
-    "    print(\"\\n📋 Fetching latest registered model version...\")\n",
-    "\n",
-    "    versions = list(client.search_model_versions(f\"name='{config.MODEL_NAME}'\"))\n",
-    "    if not versions:\n",
-    "        print(\"❌ No model versions found\")\n",
-    "        return None\n",
-    "\n",
-    "    latest = sorted(versions, key=lambda m: int(m.version), reverse=True)[0]\n",
+    "def get_all_registered_versions() -> List[Dict]:\n",
+    "    \"\"\"Fetch ALL registered model versions with their metrics\"\"\"\n",
+    "    print(\"\\n📋 Fetching ALL registered model versions...\")\n",
     "    \n",
-    "    return {\n",
-    "        'version': int(latest.version),\n",
-    "        'run_id': latest.run_id,\n",
-    "        'metric': get_metric_from_run(latest.run_id)\n",
-    "    }\n",
+    "    try:\n",
+    "        versions = list(client.search_model_versions(f\"name='{config.MODEL_NAME}'\"))\n",
+    "        \n",
+    "        if not versions:\n",
+    "            print(\"❌ No model versions found in registry\")\n",
+    "            return []\n",
+    "        \n",
+    "        version_list = []\n",
+    "        for mv in versions:\n",
+    "            metric_value = get_metric_from_run(mv.run_id)\n",
+    "            \n",
+    "            version_info = {\n",
+    "                'version': int(mv.version),\n",
+    "                'run_id': mv.run_id,\n",
+    "                'metric': metric_value,\n",
+    "                'status': mv.status,\n",
+    "                'creation_timestamp': mv.creation_timestamp\n",
+    "            }\n",
+    "            version_list.append(version_info)\n",
+    "            \n",
+    "            print(f\"   v{mv.version}: {config.PRIMARY_METRIC}={metric_value} (status={mv.status})\")\n",
+    "        \n",
+    "        print(f\"\\n📊 Total versions found: {len(version_list)}\")\n",
+    "        return version_list\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error fetching model versions: {e}\")\n",
+    "        return []\n",
     "\n",
     "\n",
-    "def get_current_staging_version():\n",
-    "    print(\"\\n📋 Checking current staging model...\")\n",
+    "def find_best_model(versions: List[Dict]) -> Optional[Dict]:\n",
+    "    \"\"\"Find the best model from all versions based on primary metric\"\"\"\n",
+    "    print(f\"\\n🔍 Finding best model based on {config.PRIMARY_METRIC} ({config.DIRECTION})...\")\n",
+    "    \n",
+    "    # Filter out versions without metrics\n",
+    "    valid_versions = [v for v in versions if v['metric'] is not None and v['status'] == 'READY']\n",
+    "    \n",
+    "    if not valid_versions:\n",
+    "        print(\"❌ No valid versions with metrics found\")\n",
+    "        return None\n",
+    "    \n",
+    "    # Sort based on direction\n",
+    "    if config.DIRECTION == \"maximize\":\n",
+    "        best = max(valid_versions, key=lambda x: x['metric'])\n",
+    "        print(f\"   📈 Best model (highest {config.PRIMARY_METRIC}): v{best['version']} = {best['metric']:.4f}\")\n",
+    "    else:  # minimize\n",
+    "        best = min(valid_versions, key=lambda x: x['metric'])\n",
+    "        print(f\"   📉 Best model (lowest {config.PRIMARY_METRIC}): v{best['version']} = {best['metric']:.4f}\")\n",
+    "    \n",
+    "    return best\n",
     "\n",
+    "\n",
+    "def get_current_staging_version() -> Optional[Dict]:\n",
+    "    \"\"\"Get the current model in Staging alias\"\"\"\n",
+    "    print(\"\\n📋 Checking current Staging model...\")\n",
+    "    \n",
     "    try:\n",
     "        staging = client.get_model_version_by_alias(config.MODEL_NAME, config.STAGING_ALIAS)\n",
-    "        return {\n",
+    "        metric_value = get_metric_from_run(staging.run_id)\n",
+    "        \n",
+    "        staging_info = {\n",
     "            'version': int(staging.version),\n",
     "            'run_id': staging.run_id,\n",
-    "            'metric': get_metric_from_run(staging.run_id)\n",
+    "            'metric': metric_value\n",
     "        }\n",
-    "    except:\n",
-    "        print(\"ℹ️ No staging model exists yet\")\n",
+    "        \n",
+    "        print(f\"   Current @{config.STAGING_ALIAS}: v{staging.version} ({config.PRIMARY_METRIC}={metric_value})\")\n",
+    "        return staging_info\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"   ℹ️ No model currently in @{config.STAGING_ALIAS}\")\n",
     "        return None\n",
     "\n",
     "\n",
-    "def should_promote(new, staging) -> tuple:\n",
-    "    print(\"\\n📋 Comparing performance...\")\n",
+    "def should_promote(best_model: Dict, current_staging: Optional[Dict]) -> tuple:\n",
+    "    \"\"\"Determine if best model should be promoted to staging\"\"\"\n",
+    "    print(f\"\\n🔬 Comparing best model with current staging...\")\n",
+    "    \n",
+    "    # Case 1: No staging model exists - promote best model\n",
+    "    if current_staging is None:\n",
+    "        print(\"   ✅ No staging model exists - promoting best model\")\n",
+    "        return True, \"First staging model (best from all versions)\"\n",
+    "    \n",
+    "    # Case 2: Best model is already in staging - no change needed\n",
+    "    if best_model['version'] == current_staging['version']:\n",
+    "        print(f\"   ℹ️ Best model (v{best_model['version']}) is already in staging\")\n",
+    "        return False, \"Best model already in staging\"\n",
+    "    \n",
+    "    # Case 3: Best model is different from staging - promote it\n",
+    "    print(f\"   🔄 Better model found:\")\n",
+    "    print(f\"      Current staging: v{current_staging['version']} = {current_staging['metric']:.4f}\")\n",
+    "    print(f\"      Best available: v{best_model['version']} = {best_model['metric']:.4f}\")\n",
+    "    \n",
+    "    return True, f\"Better model found (v{best_model['version']} > v{current_staging['version']})\"\n",
     "\n",
-    "    if staging is None:\n",
-    "        return True, \"First model promotion\"\n",
     "\n",
-    "    if new[\"metric\"] is None:\n",
-    "        return True, \"No metric available for comparison\"\n",
-    "\n",
-    "    if abs(new[\"metric\"] - staging[\"metric\"]) <= config.TOLERANCE:\n",
-    "        return False, \"No improvement (metric equal)\"\n",
-    "\n",
-    "    if config.DIRECTION == \"maximize\" and new[\"metric\"] > staging[\"metric\"]:\n",
-    "        return True, \"Improved performance\"\n",
-    "\n",
-    "    if config.DIRECTION == \"minimize\" and new[\"metric\"] < staging[\"metric\"]:\n",
-    "        return True, \"Lower is better\"\n",
-    "\n",
-    "    return False, \"Performance worse\"\n",
-    "\n",
-    "\n",
-    "def promote_to_staging(version: int, reason: str):\n",
+    "def promote_to_staging(version: int, reason: str) -> bool:\n",
+    "    \"\"\"Promote a specific version to Staging alias\"\"\"\n",
     "    print(f\"\\n🚀 Promoting v{version} → @{config.STAGING_ALIAS}\")\n",
-    "\n",
+    "    print(f\"   Reason: {reason}\")\n",
+    "    \n",
+    "    # Wait for model to be ready\n",
     "    if not wait_until_ready(version):\n",
-    "        print(\"❌ Promotion failed (model not ready)\")\n",
+    "        print(\"❌ Promotion failed - model not ready\")\n",
     "        return False\n",
-    "\n",
-    "    client.set_registered_model_alias(config.MODEL_NAME, config.STAGING_ALIAS, version)\n",
-    "\n",
-    "    print(f\"✅ Model promoted successfully (Reason: {reason})\")\n",
-    "    return True\n",
+    "    \n",
+    "    try:\n",
+    "        # Set the staging alias\n",
+    "        client.set_registered_model_alias(\n",
+    "            config.MODEL_NAME, \n",
+    "            config.STAGING_ALIAS, \n",
+    "            version\n",
+    "        )\n",
+    "        \n",
+    "        print(f\"✅ Successfully promoted v{version} to @{config.STAGING_ALIAS}\")\n",
+    "        return True\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Failed to promote model: {e}\")\n",
+    "        traceback.print_exc()\n",
+    "        return False\n",
     "\n",
     "\n",
     "# =============================================================================\n",
@@ -206,22 +263,55 @@
     "# =============================================================================\n",
     "\n",
     "def main():\n",
-    "\n",
-    "    latest = get_latest_registered_version()\n",
-    "    staging = get_current_staging_version()\n",
-    "\n",
-    "    promote_flag, reason = should_promote(latest, staging)\n",
-    "\n",
-    "    if promote_flag:\n",
-    "        promote_to_staging(latest['version'], reason)\n",
+    "    \"\"\"Main execution logic - Always promote the best model\"\"\"\n",
+    "    \n",
+    "    print(\"\\n\" + \"=\" * 80)\n",
+    "    print(\"🎯 STARTING BEST MODEL SELECTION AND PROMOTION\")\n",
+    "    print(\"=\" * 80)\n",
+    "    \n",
+    "    # Step 1: Get all registered model versions\n",
+    "    all_versions = get_all_registered_versions()\n",
+    "    \n",
+    "    if not all_versions:\n",
+    "        print(\"\\n❌ No model versions found - nothing to promote\")\n",
+    "        return\n",
+    "    \n",
+    "    # Step 2: Find the best model from all versions\n",
+    "    best_model = find_best_model(all_versions)\n",
+    "    \n",
+    "    if not best_model:\n",
+    "        print(\"\\n❌ Could not determine best model\")\n",
+    "        return\n",
+    "    \n",
+    "    # Step 3: Get current staging model\n",
+    "    current_staging = get_current_staging_version()\n",
+    "    \n",
+    "    # Step 4: Decide if promotion is needed\n",
+    "    should_promote_flag, reason = should_promote(best_model, current_staging)\n",
+    "    \n",
+    "    # Step 5: Promote if needed\n",
+    "    if should_promote_flag:\n",
+    "        success = promote_to_staging(best_model['version'], reason)\n",
+    "        \n",
+    "        if success:\n",
+    "            print(\"\\n\" + \"=\" * 80)\n",
+    "            print(\"🎉 PROMOTION COMPLETED SUCCESSFULLY!\")\n",
+    "            print(f\"   Model v{best_model['version']} is now in @{config.STAGING_ALIAS}\")\n",
+    "            print(f\"   Metric: {config.PRIMARY_METRIC} = {best_model['metric']:.4f}\")\n",
+    "            print(\"=\" * 80)\n",
+    "        else:\n",
+    "            print(\"\\n❌ Promotion failed\")\n",
     "    else:\n",
-    "        print(f\"\\n⚠️ Promotion skipped → {reason}\")\n",
-    "\n",
-    "    print(\"\\n🎉 Staging Promotion process completed!\")\n",
+    "        print(\"\\n\" + \"=\" * 80)\n",
+    "        print(\"ℹ️ NO PROMOTION NEEDED\")\n",
+    "        print(f\"   Reason: {reason}\")\n",
+    "        print(\"=\" * 80)\n",
+    "    \n",
+    "    print(\"\\n🎉 UAT Staging Promotion process completed!\")\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    main()\n"
+    "    main()"
    ]
   }
  ],
